# insensitive-buf

./: Cargo.toml  README.md  deny.toml
src/: insensitive.rs  insensitive_buf.rs  insensitive_display.rs  insensitive_ref.rs  lib.rs
