[package]
name = "insensitive-buf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
smallvec = { version = "1.13.2", features = ["const_generics", "serde", "write", "union"], optional = true }
bytemuck = { version = "1.18.0", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"], optional = true }
log = { version = "0.4.22" }

[dev-dependencies]
env_logger = "0.11.5"

[features]
default = [ "std" ]
alloc = [ "dep:smallvec" ]
serde = [ "alloc", "dep:serde" ]
std = [ "alloc" ]

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
allow_attributes = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
future_not_send = "warn"
missing_const_for_fn = "warn"
